[package]
name = "const-default-derive"
version = "0.1.0"
edition = "2018"

documentation = "https://docs.rs/const-default-derive"
repository = "https://github.com/AerialX/const-default.rs"
readme = "../README.md"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", default-features = false, features = ["derive", 
 "parsing", "proc-macro", "printing"] }
